# VynexOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build_test.py  compile_check.py  temp_build.bat  test.cpp  test2.cpp  test_click.cpp  test_compile.cpp  test_script.py
docs/: .docs_cache.json  Build.md  Changelog.md  Development Diary.md  Documentation Contribution Guide.md  Engineering.md  Glossary.md  Home.md  Known Issues.md  Project.md  Release Notes.md  Release_Checklist_v0.6.0.md  Roadmap.md  Sprint History.md  Technical Debt.md  Testing.md  Version_0.6.0_Final_Engineering_Report.md  documentation_index.json
docs/.obsidian/: app.json  graph.json  workspace.json
docs/Debugging/: INC-0001_Runtime_Window_Disappears_On_Click.md  INC-0002_SceneGraph_Window_Disappears.md  INC-0003_Runtime_Rendering_Defect.md  INC-0004_CompositionRoot_Encapsulation_Violation.md  Version_0.6.0_Debugging_History.md  Version_0.6.0_Test_Stabilization.md
docs/Decisions/: ADR-000 Index.md  ADR-001 Runtime Architecture.md  ADR-002 Dependency Injection.md  ADR-003 Event Bus.md  ADR-004 Window Manager.md  ADR-005 Notification Pipeline.md  ADR-006 Plugin Manager.md  ADR-007 HAL.md
docs/Developer Guide/: Architecture Rules.md  Coding Standards.md  Dependency Rules.md  Folder Structure.md  How to Add a Driver.md  How to Add a Service.md  How to Add an Application.md  Naming Convention.md  Review Checklist.md  Testing Workflow.md
docs/Future/: AI Runtime.md  Drivers.md  Kernel.md  Memory Manager.md  Networking.md  Process Manager.md  Scheduler.md  Virtual File System.md
docs/Interfaces/: IAiRuntime.md  IAiSession.md  IAudioDevice.md  IBlockDevice.md  ICompositor.md  IComputeDevice.md  IConfigManager.md  IDebugConsole.md  IDesktopShell.md  IDisplay.md  IDisplayAbstraction.md  IEventBus.md  IFileExplorer.md  IHardwareClock.md  IInputDriver.md  IIpcEndpoint.md  IIpcFramework.md  ILibraryLoader.md  ILogger.md  INetworkAdapter.md  INotificationService.md  IPlugin.md  IPluginManager.md  IService.md  IServiceManager.md  ISharedLibrary.md  ISurface.md  ISystemMonitor.md  ITaskScheduler.md  ITerminal.md  IWidgetToolkit.md  IWindowManager.md
docs/Release Notes/: v0.4.1.md  v0.5.0.md  v0.6.0.md
docs/Services/: AiError.md  AudioError.md  BasicCompositor.md  BasicFileExplorer.md  BasicNotificationService.md  BasicPluginManager.md  BasicServiceManager.md  BasicTaskScheduler.md  BasicTerminal.md  BasicWidgetToolkit.md  BasicWindowManager.md  ClockError.md  ComputeError.md  ConfigError.md  DemoApp.md  DesktopShell.md  DisplayError.md  DummyEventBus.md  DummyLogger.md  FileLogger.md  FrameClock.md  InMemoryConfigManager.md  InMemoryEventBus.md  IpcError.md  LibraryLoadError.md  LoadedPlugin.md  LocalIpcEndpoint.md  LocalIpcFramework.md  LogLevel.md  MockAudioDriver.md  MockBlockDevice.md  MockComputeDriver.md  MockDisplayBackend.md  MockHardwareClock.md  MockInputDriver.md  MockNetworkAdapter.md  NetworkError.md  NotificationPriority.md  PluginContext.md  PluginContextFactory.md  (+13 more)
docs/Sprints/: Sprint 01.md  Sprint 02.md  Sprint 03.md  Sprint 04.md  Sprint 05.md  Sprint 06.md  Sprint 07.md  Sprint 08.md  Sprint 09.md  Sprint 10.md  Sprint 11.md  Sprint 12.md  Sprint 13.md  Sprint 14.md
docs/Testing/: Build Verification.md  Runtime Verification.md  Version_0.6.0_Performance_Report.md  v0.6.0_Phase_1_Verification.md  v0.6.0_Phase_2_Verification.md  v0.6.0_Phase_3_Verification.md
docs/architecture/: 0.3.0_Extension_Framework.md  0.4.0_HAL_Completion.md  0.5.0_Physical_Driver_Layer.md  Architecture Review Log.md  Bootstrap.md  Composition Root.md  Compositor.md  Core.md  Dependency Injection.md  Desktop Shell.md  Desktop.md  Development_Diary.md  Documentation Platform.md  Event Bus.md  File Explorer.md  HAL.md  IPC.md  Logger.md  Logging.md  Notification System.md  Plugin Manager.md  Plugin System.md  Runtime Loop.md  Runtime.md  Startup Sequence.md  System Overview.md  Terminal.md  Testing_Architecture.md  Version_0.6.0_Architecture_Principles.md  Window Manager.md  v0_7_0_technical_design_specification.md
include/vynexos_abi/: plugin.h
scratch/: audit.py  graph_audit.py
scratch/sdl2_test/: CMakeLists.txt
scripts/: build_vm_image.sh
src/core/: CMakeLists.txt  basic_plugin_manager.cpp  basic_plugin_manager.hpp  basic_service_manager.hpp  basic_task_scheduler.cpp  basic_task_scheduler.hpp  file_logger.cpp  file_logger.hpp  frame_clock.cpp  in_memory_config.hpp  in_memory_event_bus.hpp  loaded_plugin.cpp  local_ipc_framework.cpp  local_ipc_framework.hpp  memory_file_handle.cpp  memory_file_handle.hpp  memory_file_system.cpp  plugin_context.cpp  plugin_context_factory.cpp  virtual_path.cpp  vnode.hpp
src/desktop/: CMakeLists.txt  basic_compositor.cpp  basic_compositor.hpp  basic_notification_service.cpp  basic_notification_service.hpp  basic_widget_toolkit.cpp  basic_widget_toolkit.hpp  basic_window_manager.cpp  basic_window_manager.hpp  mock_display_backend.cpp  mock_display_backend.hpp  sdl2_display_backend.cpp  sdl2_display_backend.hpp  software_surface.cpp  software_surface.hpp
src/hal/: CMakeLists.txt  library_loader_factory.cpp  mock_audio_driver.cpp  mock_audio_driver.hpp  mock_block_device.cpp  mock_block_device.hpp  mock_compute_driver.cpp  mock_compute_driver.hpp  mock_hardware_clock.cpp  mock_hardware_clock.hpp  mock_input_driver.cpp  mock_input_driver.hpp  mock_network_adapter.cpp  mock_network_adapter.hpp  posix_library_loader.cpp  posix_library_loader.hpp  sdl2_input_driver.cpp  sdl2_input_driver.hpp  windows_library_loader.cpp  windows_library_loader.hpp
src/tests/: CMakeLists.txt  test_application_integration.cpp  test_application_registry.cpp  test_basic_file_explorer.cpp  test_compositor.cpp  test_desktop_shell.cpp  test_hal.cpp  test_memory_file_handle.cpp  test_memory_file_system.cpp  test_plugin.c  test_plugin_init_fail.c  test_plugin_invalid_abi.c  test_plugin_manager.cpp  test_plugin_v2.c  test_runtime_bug.cpp  test_sdl_integration.cpp  test_task_scheduler.cpp  test_virtual_path.cpp  test_vnode.cpp  test_widget_toolkit.cpp  test_window_manager.cpp
(+82 files in other folders)
